--- a/Training/app/src/main/res/layout/header.xml
+++ b/Training/app/src/main/res/layout/header.xml
@@ -13,6 +13,7 @@
         android:layout_height="75dp"
         />
     <TextView
+        android:id="@+id/user_name_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ahmed ali"
@@ -20,6 +21,7 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"/>
     <TextView
+        android:id="@+id/user_email_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ahmedali@gmail.com"
