--- a/Training/app/src/main/res/layout/activity_my_profile.xml
+++ b/Training/app/src/main/res/layout/activity_my_profile.xml
@@ -21,15 +21,17 @@
                 android:layout_width="98dp"
                 android:layout_height="98dp"
                 android:src="@drawable/person_icon"/>
+
             <TextView
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center_horizontal"
+                android:id="@+id/txt_profile_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Wiliam Snoe"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                tools:text="Wiliam Snoe"
                 android:textColor="#fff"
-                android:textStyle="bold"
-                android:textSize="21sp"/>
+                android:textSize="21sp"
+                android:textStyle="bold" />
         </LinearLayout>
         <android.support.v7.widget.CardView
             android:layout_width="350dp"
@@ -53,14 +55,16 @@
                         android:text="Points"
                         android:textSize="20sp"
                         />
+
                     <TextView
+                        android:id="@+id/txt_profile_points"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="125"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
                         android:paddingTop="10dp"
-                        android:textColor="@color/startblue"/>
+                        tools:text="125"
+                        android:textColor="@color/startblue"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -76,9 +80,10 @@
                         android:textSize="20sp"
                         />
                     <TextView
+                        android:id="@+id/txt_profile_cards"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1205"
+                        tools:text="1205"
                         android:textStyle="bold"
                         android:textSize="20sp"
                         android:paddingTop="10dp"
@@ -98,9 +103,10 @@
                         android:text="Garages"
                         android:textSize="20sp" />
                     <TextView
+                        android:id="@+id/txt_profile_garages"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="360"
+                        tools:text="360"
                         android:textStyle="bold"
                         android:textSize="20sp"
                         android:paddingTop="10dp"
@@ -128,12 +134,13 @@
                 android:layout_height="36dp"
                 android:src="@drawable/ic_email_black_24dp"/>
             <TextView
+                android:id="@+id/txt_profile_useremail"
                 android:textStyle="bold"
                 android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
-                android:text="Wiliam@gmail.com"/>
+                tools:text="Wiliam@gmail.com"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="18dp"
@@ -146,12 +153,13 @@
                 android:layout_height="36dp"
                 android:src="@drawable/ic_phone_android_black_24dp"/>
             <TextView
+                android:id="@+id/txt_profile_userphone"
                 android:textStyle="bold"
                 android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
-                android:text="+266 225 225"/>
+                tools:text="+266 225 225"/>
         </LinearLayout>
 
     </LinearLayout>
