--- a/Training/app/src/main/res/layout/activity_settings.xml
+++ b/Training/app/src/main/res/layout/activity_settings.xml
@@ -16,8 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_width="84dp"
+            android:layout_height="84dp"
             android:src="@drawable/person_icon"
             android:scaleType="fitXY"
             />
@@ -50,6 +51,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin">
 
             <TextView
+                android:id="@+id/tv_setting_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/textview_border"
@@ -62,6 +64,7 @@
                 android:gravity="center_vertical"/>
 
             <ImageView
+                android:id="@+id/img_setting_name"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:contentDescription="Edit image icon"
@@ -78,6 +81,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin">
 
             <TextView
+                android:id="@+id/tv_setting_email"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/textview_border"
@@ -90,6 +94,7 @@
                 android:gravity="center_vertical"/>
 
             <ImageView
+                android:id="@+id/img_setting_email"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:contentDescription="Edit image icon"
@@ -106,6 +111,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin">
 
             <TextView
+                android:id="@+id/tv_setting_password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/textview_border"
@@ -119,6 +125,7 @@
                 android:gravity="center_vertical"/>
 
             <ImageView
+                android:id="@+id/img_setting_password"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:contentDescription="Edit image icon"
@@ -135,6 +142,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin">
 
             <TextView
+                android:id="@+id/tv_setting_phone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/textview_border"
@@ -146,6 +154,7 @@
                 android:gravity="center_vertical"/>
 
             <ImageView
+                android:id="@+id/img_setting_phone"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:contentDescription="Edit image icon"
