edit reserve fragment

--- a/Training/app/src/main/res/layout/fragement_reserve.xml
+++ b/Training/app/src/main/res/layout/fragement_reserve.xml
@@ -4,11 +4,55 @@
     android:layout_height="match_parent"
     tools:context="com.example.madara.training.ReserveFragement">
 
-    <TextView
-        android:gravity="center"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="Reserver Fragment" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:text="You have "
+                android:textSize="24sp" />
+
+            <TextView
+                android:backgroundTint="@color/blue_color"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@drawable/circle_shape"
+                android:fontFamily="@font/roboto_medium"
+                android:text="2"
+                android:textColor="@color/white_color"
+                android:gravity="center"
+                android:textSize="24dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto"
+                android:text=" Slots"
+                android:textSize="24sp" />
+        </LinearLayout>
+        <Button
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reserve"
+            android:fontFamily="@font/roboto_medium"
+            android:textSize="18sp"
+            android:textColor="@color/white_color"
+            android:textAllCaps="false"/>
+    </LinearLayout>
 </FrameLayout>
