--- a/Training/app/src/main/res/layout/fragment_map.xml
+++ b/Training/app/src/main/res/layout/fragment_map.xml
@@ -10,5 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Map Fragment" />
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.google.android.gms.maps.MapView>
 
 </FrameLayout>
